i#1948 add library calls arguments printing: new dlls and tests
Added function prototypes from the following dlls:
user32.dll, ntdll.dll, wininet.dll, wsock32.dll, ws2_32.dll
oleaut32.dll, ole32.dll, shell32.dll, shlwapi.dll.

Added test application that uses functions from the following dlls:
advapi32.dll, gdi32.dll, wininet.dll, wsock32.dll, ws2_32.dll,
oleaut32.dll, ole32.dll, shell32.dll, shlwapi.dll

Added external python script for comparing expected log with drltrace
output.

Fixed syscall_unix test compilation problem in case of 64-bit Unix.

Fixes #2057

--- a/tests/framework/CMakeLists.txt
+++ b/tests/framework/CMakeLists.txt
@@ -124,6 +124,11 @@ add_drmf_test(drsyscall_test drsyscall_app drsyscall_client.c
 add_drmf_test(strace_test drsyscall_app strace_client.c
   drsyscall "" "done\n.*TEST PASSED")
 
+# drltrace tests
+if (WIN32)
+  add_drmf_test_app(drltrace_test_app drltrace_test_app.cpp)
+endif ()
+
 # drfuzz tests
 add_drmf_test_app(drfuzz_app_empty drfuzz_app_empty.c)
 add_drmf_test(drfuzz_test_empty drfuzz_app_empty drfuzz_client_empty.c
