--- a/umbra/CMakeLists.txt
+++ b/umbra/CMakeLists.txt
@@ -37,9 +37,13 @@ set(srcs
 
 # add arch specific src here
 if (X64)
-  set (srcs ${srcs} umbra_x64.c)
+  set (srcs ${srcs} umbra_64.c)
+elseif (X86)
+  set (srcs ${srcs} umbra_32.c)
+elseif (ARM)
+  set (srcs ${srcs} umbra_32.c)
 else (X64)
-  set (srcs ${srcs} umbra_x86.c)
+  message(FATAL_ERROR "Umbra does not support this architecture")
 endif (X64)
 
 # i#1594c#3: VS generators fail if static lib has resources
