i#1848: auto-generate a syscall file on a new OS
Moves the default syscall file location into logs/symbols instead of the
bin/ directory, as we need a writable location.  Adds a new option
-syscall_number_path to allow specifying a custom location.

Adds functionality to drsyscall to fetch debug info for system libraries
and parse every symbol in each library looking for syscall wrappers.  Two
interfaces are added: drsys_find_sysnum_dlls() and
drsys_generate_sysnum_file().  Includes usercall identification support via
a list of target wrappers for key usercalls plus interpolation between
known numbers to include speculative results for all usercalls.  The
syscall wrapper parsing code is based on DR's winsysnums.c, expanded to
support 64-bit.

The resulting syscall file only supports the current machine, unlike the
general files we have posted for downloading.

Adds auto-triggering of the new functionality when an unknown OS version is
detected.  A special exit code is used, and when the frontend sees it, it
invokes the drsyscall functions for generating a syscall file.  If that is
successful, it re-launches the app.

Adds new options -vv and -vvv to support raising verbosity for the
drsyscall code invoked directly from the frontend.

Changes the existing mksystable.pl-based test to test the new auto-gen
functionality.

Fixes #1848

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1376,7 +1376,8 @@ if (USE_DRSYMS)
   set(DynamoRIO_RPATH ON)
   configure_DynamoRIO_standalone(${toolname})
   set(DynamoRIO_RPATH ${old_rpath})
-  target_link_libraries(${toolname} drinjectlib drconfiglib drfrontendlib)
+  target_link_libraries(${toolname} drinjectlib drconfiglib drfrontendlib
+    drsyscall_static)
   if (WIN32)
     set_target_properties(${toolname} PROPERTIES
       VERSION ${TOOL_VERSION_NUMBER}
