--- a/make/resources.rc
+++ b/make/resources.rc
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2014-2015 Google, Inc.  All rights reserved.
+ * Copyright (c) 2014-2017 Google, Inc.  All rights reserved.
  * **********************************************************/
 
 /* Dr. Memory: the memory debugger
@@ -55,6 +55,10 @@
 #elif defined(RC_IS_FRONTEND)
 # define FILE_NAME TOOLNAME ".exe"
 # define FILE_DESCRIPTION TOOLNAME_CAP_SPC " front end"
+# define FILE_TYPE VFT_APP
+#elif defined(RC_IS_GENSYSNUMS)
+# define FILE_NAME "gensysnums.exe"
+# define FILE_DESCRIPTION "System call number utility"
 # define FILE_TYPE VFT_APP
 #elif defined(RC_IS_SYMQUERY)
 # define FILE_NAME "symquery.exe"
