DRi#1967 cron builds: include Mac
Adds Mac to the builds for deploying.
Adds malloc to the auto-ignore list to keep the bot green.

Issue: #2038

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ jobs:
       env: DEPLOY=yes
       # XXX: DRi#2764: Travis OSX resources are over-subscribed and it can take
       # hours to get an OSX machine, so we skip running PR's for now.
-      if: type = push
+      if: type IN (push, cron)
 
 # For C/C++ there is no default install, so we set "install", not "before_install".
 install:
