--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2321,6 +2321,8 @@ endif (WIN32 AND NOT BUILDING_SUB_PACKAGE)
 # sure about the caps.
 set(CPACK_PACKAGE_FILE_NAME
   "${toolname_cap}-${CPACK_SYSTEM_NAME}-${CPACK_PACKAGE_VERSION}-${TOOL_BUILD_NUMBER}")
+message(STATUS "Package version is ${CPACK_PACKAGE_VERSION}") #NOCHECKI
+message(STATUS "Package name is ${CPACK_PACKAGE_FILE_NAME}") #NOCHECKI
 set(CPACK_SOURCE_PACKAGE_FILE_NAME
   "${toolname_cap}-${CPACK_PACKAGE_VERSION}-${TOOL_BUILD_NUMBER}-Source")
 
