i#1557: compatibility update, CMake API dynamorio has changed.
Adding location suffix parameter to calls of DynamoRIO_get_target_path_for_execution, DynamoRIO_copy_target_to_device. This patch does not address the LOCATION part of i#1557 itself.

Issue: #1557

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1050,7 +1050,7 @@ endif ()
 
 function (copy_target_to_device target)
   if (DRM_COPY_TO_DEVICE)
-    DynamoRIO_copy_target_to_device(${target} ${DRM_DEVICE_BASEDIR})
+    DynamoRIO_copy_target_to_device(${target} ${DRM_DEVICE_BASEDIR} "${_DR_location_suffix}")
   endif ()
 endfunction (copy_target_to_device)
 
@@ -1068,9 +1068,9 @@ endfunction (copy_file_to_device)
 
 function (get_target_path_for_execution out target)
   if (ANDROID)
-    DynamoRIO_get_target_path_for_execution(local ${target} ${DRM_DEVICE_BASEDIR})
+    DynamoRIO_get_target_path_for_execution(local ${target} ${DRM_DEVICE_BASEDIR} "${_DR_location_suffix}")
   else ()
-    DynamoRIO_get_target_path_for_execution(local ${target} "")
+    DynamoRIO_get_target_path_for_execution(local ${target} "" "${_DR_location_suffix}")
   endif ()
   set(${out} ${local} PARENT_SCOPE)
 endfunction (get_target_path_for_execution)
