Try verbose 2 and 4 runs to repro crash

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -440,8 +440,10 @@ if (ARM)
 endif (ARM)
 newtest(badjmp badjmp.c)
 if (NOT ARM) # XXX i#1726: port to ARM
-  newtest_ex(registers registers.c "" "-verbose;3" "" OFF "registers" 0)
-  newtest_ex(registersB registers.c "" "-verbose;3" "" OFF "registers" 0)
+  newtest_ex(registers registers.c "" "-verbose;2" "" OFF "registers" 0)
+  newtest_ex(registersB registers.c "" "-verbose;2" "" OFF "registers" 0)
+  newtest_ex(registersC registers.c "" "-verbose;2" "" OFF "registers" 0)
+  newtest_ex(registersD registers.c "" "-verbose;2" "" OFF "registers" 0)
 endif ()
 if (ARM)
   newtest(asmtest asmtest_arm.c)
