--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -441,9 +441,9 @@ endif (ARM)
 newtest(badjmp badjmp.c)
 if (NOT ARM) # XXX i#1726: port to ARM
   newtest_ex(registers registers.c "" "-verbose;2" "" OFF "registers" 0)
+  set_tests_properties(registers PROPERTIES TIMEOUT 600)
   newtest_ex(registersB registers.c "" "-verbose;2" "" OFF "registers" 0)
-  newtest_ex(registersC registers.c "" "-verbose;2" "" OFF "registers" 0)
-  newtest_ex(registersD registers.c "" "-verbose;2" "" OFF "registers" 0)
+  set_tests_properties(registersB PROPERTIES TIMEOUT 600)
 endif ()
 if (ARM)
   newtest(asmtest asmtest_arm.c)
