i#1983: Add syscall auto-generation to drstrace and drltrace
Adds support for reading system call numbers from a text file to both
drstrace and drltrace.  Adds support for auto-generating that file,
just like is done in Dr. Memory.

Updates DR to 1713c2d2 to fix a decoder assert that breaks the
auto-generation.

Fixes #1983

--- a/drltrace/CMakeLists.txt
+++ b/drltrace/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2017 Google, Inc.    All rights reserved.
+# Copyright (c) 2010-2019 Google, Inc.    All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.    All rights reserved.
 # **********************************************************
 
@@ -105,7 +105,7 @@ add_executable(drltrace ${front_srcs})
 
 configure_DynamoRIO_standalone(drltrace)
 
-target_link_libraries(drltrace drinjectlib drconfiglib drfrontendlib)
+target_link_libraries(drltrace drinjectlib drconfiglib drfrontendlib drsyscall_static)
 
 set_library_version(drltrace ${DRMF_VERSION})
 
