i#2184: add Umbra support for Control Flow Guard 2TB reservation
Adds support to Umbra for the 2TB below-libraries reservation made by
Control Flow Guard.  This requires a new mapping offset for DOWN_8 and
DOWN_4 and a new mask for UP_2X, along with support for a single app
allocation spanning multiple Umbra segments.  Both the multi-segment
support and extra mask bits should not cause any problems, but neither
has been done before.

Adds additional automated checking for a reserve region overlapping
with the shadow region for a mapping.

Adds a new test of every Umbra shadow scale factor.  The test found
bugs in the existing scheme: UP_2X didn't handle app 200'-300'
properly.  That is now fixed.

Builds the umbra test app with /guard:cf to test Control Flow Guard.
Unfortunately the 2TB reservation only seems to happen with VS2017.  I
did manual testing with a VS2017 build of the test app.

Adds proper reset of Umbra state to allow tearing down and restarting
Umbra with a new scheme.

Changes DrM's -define_unknown_regions behavior to invoke mmap_walk()
(and fixes a bug in mmap_walk) to only shadow-define committed memory,
avoiding an attempt to shadow-define the whole 2TB region.

Fixes #2184

--- a/tests/framework/CMakeLists.txt
+++ b/tests/framework/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2012-2016 Google, Inc.  All rights reserved.
+# Copyright (c) 2012-2019 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -142,6 +142,12 @@ use_DynamoRIO_extension(drfuzz_test_no_crash.client drsyms)
 
 set(asm_defs "${asm_defs}" -I "${CMAKE_CURRENT_SOURCE_DIR}") # for umbra_test_shared.h
 add_drmf_test_app(umbra_app umbra_app.c)
+if (WIN32)
+  # Try to test i#2184 where Control Flow Guard allocates a 2TB reservation
+  # crossing multiple Umbra segments.  I can only repro that with VS2017, but
+  # we put this in place in anticipation of updating to VS2017.
+  append_property_string(TARGET umbra_app COMPILE_FLAGS "/guard:cf")
+endif ()
 target_include_directories(umbra_app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_drmf_test(umbra_test_empty      umbra_app umbra_client_empty.c
@@ -167,3 +173,6 @@ use_DynamoRIO_extension(umbra_test_consistency.client drreg)
 use_DynamoRIO_extension(umbra_test_consistency.client drutil)
 target_include_directories(umbra_test_consistency.client PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_drmf_test(umbra_test_allscales umbra_app umbra_client_allscales.c
+  umbra "" ".*TEST PASSED")
