Temporarily build packages in this PR for testing

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -53,6 +53,10 @@ build:
 configuration:
   - 2013
 
+# TEMPORARY to test cron building
+environment:
+  APPVEYOR_REPO_TAG: true
+
 install:
   ##################################################
   # Install ninja so we have readable output.
