--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,11 @@ language:
   - c
   - cpp
 
+# TEMPORARY to test cron builds.
+env:
+  global:
+    - TRAVIS_EVENT_TYPE=cron
+
 # We use a jobs include approach rather than an os, compiler, env matrix
 # with exludes so we can use conditional builds (plus it's clearer this way).
 jobs:
@@ -100,7 +105,7 @@ before_deploy:
   # We handle races among our 4 package jobs by ignoring failure here.
   # XXX: That could mask a real failure: we could try to distinguish the
   # type of error.
-  - (git tag $GIT_TAG -a -m "Travis auto-generated tag for build $TRAVIS_BUILD_NUMBER." || true)
+#TEMPORARY  - (git tag $GIT_TAG -a -m "Travis auto-generated tag for build $TRAVIS_BUILD_NUMBER." || true)
 deploy:
   provider: releases
   api_key:
