--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2256,6 +2256,7 @@ else (UNIX)
   if ("${CMAKE_VERSION}" VERSION_EQUAL "3.3" OR
       "${CMAKE_VERSION}" VERSION_GREATER "3.3")
     # WIX's candle.exe must be on the path for cpack to run it, so hints don't help
+    message(STATUS "Looking for candle from WIX") #TEMPORARY
     find_program(WIX candle DOC "WIX for creating installer")
   endif ()
   # Prefer WIX
@@ -2310,7 +2311,7 @@ else (UNIX)
     message(STATUS "Neither NSIS nor WIX found (please install and add to path if desired).  Creating only a zip package.")
     set(CPACK_GENERATOR "ZIP")
   endif ()
-  set(CPACK_SOURCE_GENERATOR "ZIP")
+  set(CPACK_SOURCE_GENERATOR "") #TEMPORARY
   set(CPACK_SYSTEM_NAME "Windows")
   if (USE_DRSYMS)
     set(CPACK_SYSTEM_NAME "Windows")
